# freshspark

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
freshspark/: __init__.py  __main__.py  core.py
tests/: conftest.py  test_cli.py  test_core.py  test_types_and_imports.py
