[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freshspark"
dynamic = ["version"]
description = "Create truly fresh local Spark sessions with isolated temp dirs and reliable teardown."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["pyspark", "spark", "spark-session", "spark local", "spark cleanup"]
authors = [{ name = "Odos Matthews" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  # Spark 4.x requires Java 17+ and has stricter JVM wiring; stay on 3.5.x until explicitly supported.
  "pyspark>=3.5,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.9",
  "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/eddiethedean/freshspark"
Issues = "https://github.com/eddiethedean/freshspark/issues"

[project.scripts]
freshspark = "freshspark.__main__:main"

[tool.setuptools.dynamic]
version = { attr = "freshspark.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["freshspark*"]

[tool.setuptools.package-data]
freshspark = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py39"
src = ["freshspark", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

# Mypy requires python_version >= 3.10 in config; the package still supports Python 3.9+ at runtime.
[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true
